deployment/k8s/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      serviceAccountName: keycloak-sa
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      imagePullSecrets:
        - name: ghcr-cred
      containers:
        - name: keycloak
          image: ghcr.io/dhbw-tobi-felix/goofy-do/goofydo-keycloak:latest
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: keycloak-data
              mountPath: /opt/keycloak/data
            - name: keycloak-import
              mountPath: /opt/keycloak/data/import
            - name: tmp-volume
              mountPath: /tmp
      volumes:
        - name: keycloak-data
          emptyDir: { }
        - name: keycloak-import
          configMap:
            name: keycloak-realm-import
        - name: tmp-volume
          emptyDir: { }
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  type: ClusterIP
  selector:
    app: keycloak
  ports:
    - port: 8080
      targetPort: 8080
